[package]
name = "mcrs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bytemuck = { version = "1.23.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.8"
glyphon = "0.9.0"
image = { version = "0.25.6", features = ["png", "jpeg"] }
instant = "0.1.13"
log = "0.4.27"
pollster = "0.4.0"
rand = "0.9.1"
tobj = { version = "4.0.3", features = ["async", "tokio"] }
wgpu = "25.0.2"
winit = "0.30.11"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

